package com.shadowgame.rpg.msg;
option java_outer_classname="LoginMsg$$Gen";
import "com/shadowgame/rpg/msg/AlertMsg.proto";
import "com/shadowgame/rpg/msg/NoticeMsg.proto";
	/**
	 * 登录消息
	 * @author wcj10051891@gmail.com
	 * @Date 2015年5月27日 上午10:03:53
	 */
message LoginMsg{
	/**
	 * 用户名
	 */
	optional string username=1;
	/**
	 * 密码
	 */
	optional string password=2;
	/**
	 * 弹窗提示
	 */
	optional com.shadowgame.rpg.msg.AlertMsg alertMsg=3;
	/**
	 * 飘字提示
	 */
	repeated com.shadowgame.rpg.msg.NoticeMsg noticeMsgs=4;
	/**
	 * 字符串消息
	 */
	repeated string msgs=5;
}